--- a/sampleExtension/manifest.json
+++ b/sampleExtension/manifest.json
@@ -10,6 +10,14 @@
     "default_popup": "popup.html",
     "default_title" : "click here to test this extenstion: jagruti"
   },
+
+  "content_scripts": [
+    {
+      "matches": ["http://*/*"],
+      "js": ["popup.html"]
+    }
+  ],
+
   "permissions": [
     "activeTab",
     "https://ajax.googleapis.com/"
